--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -30,10 +30,11 @@ main {
 }
 .display{
     margin-bottom: 10px;
-
+    height: 50px;
     display: flex;
     justify-content: center;
     & input{
+        font-size: 40px;
         text-align: end;
         width: 100%;
         height: 100%;
@@ -45,40 +46,53 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 5px;
+
+
 }
 
 .number button {
     padding: 15px;
     font-size: 1.2em;
     background-color: #f1f1f1;
+
     border: 1px solid #ccc;
     border-radius: 3px;
     cursor: pointer;
+    &:hover{
+        background-color: #ffa1a2;
+
+    }
 }
 
 .controllers {
     margin: 5px;
+    & button {
+        width: 190px;
+        height: 100px;
+        background-color: #f1f1f1;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        cursor: pointer;
+        
+
+    }
 
 }
 
-.controllers button {
-    width: 190px;
-    height: 100px;
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    cursor: pointer;
-}
+
 
 footer {
+
     background-color: #333;
     color: white;
+
     text-align: center;
     padding: 10px 0;
-}
+    & a{
+        color: white;
+        text-decoration: none;
+        margin: 0 10px;
+    }
 
-footer a {
-    color: white;
-    text-decoration: none;
-    margin: 0 10px;
+
 }
